--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
-add_definitions( -DANDROID -DJAVA )
+add_definitions( -DANDROID -DLOW_MEM )
 
 
 # Setup NextCash Base Library
