--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme">
 
         <service
-            android:name=".MainService"
+            android:name=".BitcoinJob"
             android:permission="android.permission.BIND_JOB_SERVICE">
         </service>
 
