Get initial version running in single thread mode.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,10 +1,25 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
-add_definitions( -DANDROID -DLOW_MEM )
+# Specify standard library
+#add_definitions( "-DANDROID_STL=gnustl" )
+add_definitions( "-DANDROID_STL=libc++" )
+
+# Set flags
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frtti -fexceptions -fstack-protector" )
+
+# Add sanitizer
+#set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer" )
+#set( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address" )
+
+# Set preprocessor values to configure code
+add_definitions( "-DANDROID -DLOW_MEM" )
+
+# Disable multi-threading
+add_definitions( "-DSINGLE_THREAD" )
 
 
-# Setup NextCash Base Library
+# Setup NextCash Base library
 set( nextcash_lib_src_dir ../../../nextcash )
 set( nextcash_lib_build_dir ../../../nextcash/build )
 
@@ -12,7 +27,7 @@ add_subdirectory( ${nextcash_lib_src_dir}
                   ${nextcash_lib_build_dir} )
 
 
-# Setup SECP256K1 Library
+# Setup SECP256K1 library
 set( secp256k1_lib_src_dir ../../../secp256k1 )
 set( secp256k1_lib_build_dir ../../../secp256k1/build )
 
@@ -20,7 +35,7 @@ add_subdirectory( ${secp256k1_lib_src_dir}
                   ${secp256k1_lib_build_dir} )
 
 
-# Setup BitCoin Library
+# Setup BitCoin library
 set( bitcoin_lib_src_dir ../../../bitcoin )
 set( bitcoin_lib_build_dir ../../../bitcoin/build )
 
@@ -28,7 +43,7 @@ add_subdirectory( ${bitcoin_lib_src_dir}
                   ${bitcoin_lib_build_dir} )
 
 
-# Setup JNI Code
+# Setup JNI code
 include_directories( ../../../nextcash/src/base
                      ../../../nextcash/src/io
                      ../../../nextcash/src/crypto
@@ -41,3 +56,6 @@ add_library( nextcash_jni STATIC SHARED
              src/main/cpp/nextcash_jni.cpp )
 
 target_link_libraries( nextcash_jni bitcoin nextcash )
+
+set_property( TARGET nextcash_jni PROPERTY CXX_STANDARD 11 )
+set_property( TARGET nextcash_jni PROPERTY CXX_STANDARD_REQUIRED ON )
