--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MainApp"
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
@@ -31,15 +32,6 @@
             android:label="@string/title_settings"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="tech.nextcash.nextcashwallet.MainActivity"/>
-        </activity>
-
-        <activity
-            android:name=".AddWalletActivity"
-            android:label="@string/title_add_wallet"
-            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tech.nextcash.nextcashwallet.MainActivity"/>
