--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
 
         <service
             android:name=".BitcoinJob"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:stopWithTask="true">
+            android:permission="android.permission.BIND_JOB_SERVICE">
         </service>
 
         <activity
