--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
             android:permission="android.permission.BIND_JOB_SERVICE">
         </service>
 
+        <service android:name=".BitcoinService" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
