--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,8 @@
 
     <application
         android:name=".MainApp"
-        android:allowBackup="true"
-        android:fullBackupContent="@xml/backup"
-        android:icon="@drawable/icon"
+        android:allowBackup="false"
+        android:icon="@mipmap/launcher_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
