--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.2'
     implementation 'com.google.zxing:android-integration:3.3.0'
     implementation 'com.google.protobuf:protobuf-java:3.5.1'
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
